# NomiAssistantTG

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  quality.yml
src/: app.py
src/bot/: app_bot.py
src/bot/handlers/: commands.py  messages.py
src/core/: config.py  errors.py  logging.py
src/nomi/: client.py  schemas.py  service.py
src/stt/: vosk_stt.py
tests/: conftest.py  test_config.py  test_nomi_client.py  test_nomi_service.py  test_stt.py
