[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nomi_assistant_tg"
version = "0.1.0"
description = "Telegram companion powered by Nomi.ai"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ama", email = "your_email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=3.7.0",
    "imageio-ffmpeg>=0.5.1",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "vosk>=0.3.45"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

